# APG

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  cornell-blocks-arealight-color.nff  cornell-blocks-arealight.nff  cornell-blocks.nff  cornell-spheres-crazy.nff  cornell-spheres-mod.nff  cornell-spheres-raytrace.nff  cornell-spheres.nff  cornell.nff  default.nix  envmap.nff  floor_sph.nff  hdrloader.cpp  hdrloader.h  nffread.cpp  nffread.h  nffstore.h  nffview.cpp  nffwrite.h  release.nix  sphere.nff  test.nff  testapp.cpp  testapp_d.ilk  timer.cpp  timer.h  uffizi.nff
nix/: sources.json
results/: desc.neon  test0a.tga  test0b.tga  test1a.tga  test1b.tga  test1c.tga  test2a.tga  test2b.tga  test2c.tga  test2d.tga
sgl-cpp/: CMakeLists.txt
sgl-cpp/include/: Matrix4f.h  Primitive.h  Rasterizer.h  Ray.h  VBO.h  Vertex.h  context.h  errorHandler.h  material.h  point.h  pointLight.h  sgl.h
sgl-cpp/src/: Matrix4f.cpp  Primitive.cpp  Rasterizer.cpp  VBO.cpp  config.h  context.cpp  sgl.cpp
sgl-rust/: CMakeLists.txt  Cargo.toml  build.rs
sgl-rust/include/: sgl.h
sgl-rust/src/: lib.rs.empty
sgl-zig/: CMakeLists.txt  build.zig
sgl-zig/src/: main.zig
